--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
     "react-stars": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -40,6 +42,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@types/react-star-ratings": "^2.3.3",
     "@types/react-stars": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
