--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.403.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
@@ -48,6 +50,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
